--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 rmp-serde = "0.14"
-typetag = "0.1"
+# typetag = "0.1"
 rand = "0.7"
 sha3 = "0.9"
