--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,14 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 rmp-serde = "0.14"
+
+# todo: sha2 vs sha3, randcore vs rand
+
 rand = "0.7"
 sha3 = "0.9"
+
+rand_core = { version = "0.5", features = ["getrandom"] }
+k256 = { version = "0.7", features = ["zeroize", "arithmetic", "ecdh"] }
+chacha20poly1305 = { version = "0.7", features = ["default"] }
+hkdf = "0.10"
+sha2 = "0.9"
